<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_Step" Id="{d7937598-53d8-429d-a2a0-ceb33f880c1f}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}

TYPE E_Step :
(
	(* special steps *)
	NoStep := -32767,		// no step to do
	Unknown := -32000,		// unknown step
	
	(* Not Enabled or Errors*)
	NeOrError := -990,		// state machine not enabled or on errors

	(* Stop *)
	Stop := 0,				// stop the state machine
	
	(* State machine's main steps *)
	Feeding := 100,			
	WaterFilling := 200,	
	MintFilling := 300,		
	Waiting1 := 400,		
	Corking := 500,			
	Waiting2 := 600,		
		
	(* Stopping *)
	Stopping := 900
	
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>